tests/ui/issues/issue-14366.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/issue-14366.rs:2:14
   |
LL |     let _x = "test" as &dyn (::std::any::Any);
   |              ^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
   = note: required for the cast from `&'static str` to `&(dyn Any + 'static)`
help: consider borrowing the value, since `&&'static str` can be coerced into `&(dyn Any + 'static)`
   |
LL |     let _x = &"test" as &dyn (::std::any::Any);
   |              +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
